# OS

./: README.md
channel/: channel.h
libs_linux/: main.cpp  number.cpp  script.sh  vector.h
libs_win/: CMakeLists.txt  main.cpp
libs_win/Number/: number.h
libs_win/Vector/: vector.cpp  vector.h
matrix_mul_linux/: CMakeLists.txt  input.txt  main.cpp
matrix_mul_linux/matrices/: block_threads_mul.h  cols_rows_threads_mul.h  matrix_operations.h  rows_cols_threads_mul.h
matrix_mul_win/: CMakeLists.txt  input.txt  main.cpp
matrix_mul_win/matrices/: block_threads_mul.h  cols_rows_threads_mul.h  matrix_operations.h  rows_cols_threads_mul.h
pipes_linux/: CMakeLists.txt  main.cpp
pipes_linux/exec-files/: add-proc  main  mul-proc  pow-proc  sum-proc
pipes_linux/procs/: add-proc.cpp  help-funcs.h  mul-proc.cpp  pow-proc.cpp  sum-proc.cpp
processes_linux/: CMakeLists.txt  help_functions.h  killer  killer.cpp  user  user.cpp
processes_win/: CMakeLists.txt  killer.cpp  user.cpp
